Moved hamburger menu to the right, fixed nav-menu spacing

--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ img {
 }
 .header {
     display: flex;
+    justify-content: flex-end;
     width: 100vw;
 }
 #nav-bar {
@@ -40,7 +41,7 @@ img {
     
 }
 .nav-item {
-    margin: 2.5rem 10px;
+    margin: 10px;
     color: #101010;
     text-decoration: none;
     cursor: pointer;
@@ -68,12 +69,11 @@ position: fixed;
 left: -100%;
 top: 5rem;
 display: flex;
-justify-content: center;
+justify-content: space-evenly;
 flex-direction: column;
 background-color: lavender;
 width: 100%;
 height: 50vh;
-border-radius: 10px;
 text-align: center;
 transition: 0.3s;
 box-shadow:
@@ -84,10 +84,9 @@ box-shadow:
 }
 .hamburger {
     display: block;
-    justify-content: flex-end;
     cursor: pointer;
-    margin: 1rem;
-    width: 50em;
+    margin: .5rem;
+    padding: 10px;
 }
 .hamburger.active .bar:nth-child(2) {
     opacity: 0;
@@ -355,7 +354,7 @@ p {
         margin: 1vw;
     }
 /* Navigation */
-    #nav-bar {
+   /* #nav-bar {
         display: flex;
         justify-content: flex-end;
         justify-content: space-between;
@@ -366,7 +365,7 @@ p {
     }
     .nav-item {
         font-size: 1.5em;
-    }
+    } */
 /* Hero */
     #home {
         background-size: cover;
